# football-intelligence-platform

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr_request.md  bug_report.md  task.md
.github/workflows/: ai-ci.yml  frontend-build.yml  frontend-static-analysis.yml  frontend-test.yml  repo-checks.yml
ai/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ai/assistant/: __init__.py  configuration.py  pipeline.py
ai/assistant/chunking/: __init__.py  chunker.py
ai/assistant/embeddings/: __init__.py  embedder.py
ai/assistant/generation/: __init__.py  generator.py
ai/assistant/ingestion/: __init__.py  document.py  loader.py
ai/assistant/prompting/: __init__.py  templates.py
ai/assistant/retrieval/: __init__.py  retriever.py  vector_store.py
ai/assistant/services/: __init__.py  assistant_service.py
ai/backend/: __init__.py
ai/backend/app/: __init__.py  config.py  dependencies.py  main.py
ai/backend/app/exceptions/: __init__.py
ai/backend/app/middleware/: __init__.py
ai/backend/app/routers/: __init__.py  assistant.py  explainability.py  health.py  model.py  prediction.py
ai/backend/app/schemas/: __init__.py  assistant.py  common.py  explainability.py  prediction.py
ai/backend/app/services/: __init__.py  chat_service.py  explanation_service.py  prediction_service.py
ai/config/: __init__.py  paths.py  settings.py
ai/docs/demo/: stage-08-demo.md
ai/docs/reports/: stage-08-summary.md
ai/evaluation/: README.md  __init__.py  cross_validation.py  metrics.py  plots.py  reports.py
ai/explainability/: README.md  __init__.py  cache.py  configuration.py  explainer.py  pipeline.py  serializers.py
ai/explainability/plots/: __init__.py  shap_plots.py
ai/explainability/services/: __init__.py  explanation_service.py
ai/feature_engineering/: README.md  __init__.py  base.py  metadata.py  pipeline.py  registry.py  validators.py
ai/feature_engineering/features/: __init__.py  away_form.py  elo_rating.py  goal_statistics.py  head_to_head.py  home_advantage.py  league_position.py  rest_days.py  rolling_form.py  strength_of_schedule.py
ai/inference/: README.md  __init__.py  predictor.py
ai/ingestion/: README.md  __init__.py  downloader.py  pipeline.py  storage.py
ai/metadata/: README.md  __init__.py  metadata.py
ai/model_registry/: __init__.py  registry.py
ai/preprocessing/: README.md  __init__.py
ai/providers/: README.md  __init__.py  base.py  fbref.py  football_data.py  understat.py
ai/schemas/: README.md  __init__.py  match.py
ai/scripts/: README.md  __init__.py  ingest_football_data.py
ai/shared/: __init__.py  constants.py  exceptions.py  types.py
ai/tests/: README.md  conftest.py  test_bootstrap.py  test_config.py  test_storage.py
ai/tests/assistant/: __init__.py  conftest.py  test_assistant_service.py  test_chunker.py  test_document.py  test_embedder.py  test_generator.py  test_loader.py  test_retriever.py  test_templates.py  test_vector_store.py
ai/tests/backend/: __init__.py  conftest.py  test_assistant_endpoint.py  test_explain.py  test_health.py  test_model.py  test_openapi.py  test_predict.py  test_services.py  test_startup.py
ai/tests/evaluation/: __init__.py  test_cross_validation.py  test_metrics.py  test_reports.py
ai/tests/explainability/: __init__.py  conftest.py  test_cache.py  test_configuration.py  test_explainer.py  test_pipeline.py  test_plots.py  test_serializers.py  test_service.py  test_validation.py
ai/tests/feature_engineering/: conftest.py  test_elo_rating.py  test_goal_statistics.py  test_head_to_head.py  test_home_advantage.py  test_league_position.py  test_metadata.py  test_pipeline.py  test_registry.py  test_rest_days.py  test_rolling_form.py  test_strength_of_schedule.py  test_validation.py
ai/tests/inference/: __init__.py  test_predictor.py
ai/tests/ingestion/: test_pipeline.py
ai/tests/integration/: __init__.py  conftest.py  test_api_integration.py  test_error_recovery.py  test_explainability_pipeline.py  test_prediction_pipeline.py
ai/tests/metadata/: test_metadata.py
ai/tests/model_registry/: __init__.py  test_registry.py
ai/tests/providers/: test_base.py  test_fbref.py  test_football_data.py  test_understat.py
ai/tests/schemas/: test_match.py
ai/tests/training/: __init__.py  conftest.py  test_configuration.py  test_persistence.py  test_splitter.py  test_trainer.py
ai/tests/validation/: test_dataset_validator.py  test_schema_validator.py
ai/training/: README.md  __init__.py  configuration.py  persistence.py  pipeline.py  registry.py  splitter.py  trainer.py
ai/validation/: README.md  __init__.py  dataset_validator.py  schema_validator.py
backend/: README.md
datasets/: README.md
datasets/features/: feature_generation_report.json  feature_metadata.json
docs/: README.md  architecture-impact.md  repository-structure.md  troubleshooting.md
docs/adr/: 001-use-xgboost-for-predictions.md  002-joblib-model-serialization.md  003-chronological-train-val-test-split.md  004-shap-for-explainability.md  README.md
docs/demo/: README.md  stage-05-demo.md  stage-06-demo.md  stage-07-demo.md  stage-09-demo.md  stage-10-demo.md  stage-11-demo.md  stage-12-demo.md
docs/prompt-book/: volume-1.md  volume-2.md  volume-3.md  volume-4.md  volume-5.md
docs/reference/: cli.md
docs/releases/: v0.1.0-readiness.md  v0.1.0.md  v0.2.0-readiness.md  v0.2.0.md  v1.0.0-readiness.md  v1.0.0.md
docs/reports/: stage-04-summary.md  stage-05-summary.md  stage-06-summary.md  stage-07-summary.md  stage-09-summary.md  stage-10-summary.md  stage-11-summary.md  stage-12-summary.md
docs/setup/: quick-start.md
docs/showcase/: demo-script.md  interview-guide.md  portfolio-summary.md  project-showcase.md  project-timeline.md
frontend/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
frontend/app/: README.md  build.gradle.kts
playbook/: README.md
scripts/: README.md
tools/: README.md
(+86 files in other folders)
